cabal-version :     2.4
name :              minesweeper
version :           0.1.0.0

executable minesweeper 
    main-is :
        Main.hs
    hs-source-dirs :
        src
    build-depends :
        base >= 4.14 && <5,
        random
    default-language :
        Haskell2010
    other-modules :
        Cell
        Grid
        ShuffleList
        Parser
        Game
